--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello world</h1>
-
+    <h1>To Do List:</h1>
+    <div class="notepad">
+       
+    </div>
+    <div class="input_container">
+        <button class="add-task">Add Task</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
