added the default task display with details button and add task button

--- a/index.html
+++ b/index.html
@@ -16,26 +16,27 @@
     <div class="main-div">
         <div class="content">
             <div class="navigation">
-                    <h1>To-Do List:</h1>
+                    <h1> <img src="./assets/pencil.svg" class="svg">To-Do List </h1>
                     <h3 style="color: rgb(39 39 42);">Tasks:</h2>
-                    <a href="">Today</a>
-                    <a href="">Upcoming</a>
-                    <a href="">Calender</a>
+                    <a href="#" id="today"><img src="./assets/today.svg" class="svg" >Today</a>
+                    <a href="#"><img src="./assets/upcoming.svg" class="svg">Upcoming</a>
+                    <a href="#"><img src="./assets/calender.svg" class="svg">calender</a>
                             
-                    <h3 style="color: rgb(39 39 42);">Projects</h2>
-                    <a href="">Personal</a>
-                    <a href="">Work</a>
-                    <a href="">family</a>
-                    <a href="">Add a new project</a>
+                    <h3 style="color: rgb(39 39 42);">Categories</h2>
+                    <a href="#"># Personal</a>
+                    <a href="#"># Work</a>
+                    <a href="#"># Family</a>
+                    <a href="#" ><img src="./assets/plus.svg" class="svg">Add a new category</a>
                 
             </div>
             <div class="middle-panel">
-                    <h2>content</h2>
+                    <h2></h2>
             </div>
             <div class="details-panel">
 
             </div>
         </div>
     </div>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
