--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="middle-panel">
                     <h2></h2>
             </div>
-            <div class="details-panel">
+            <div class="details-panel" style="display: none;">
 
             </div>
         </div>
